environments/ads-risk-scoring-dev/apps/app-credit-origination-app/services/credit-origination-app/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: credit-origination-app
    app.kubernetes.io/part-of: app-credit-origination-app
  name: credit-origination-app
  namespace: ads-risk-scoring-dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: credit-origination-app
    app.kubernetes.io/part-of: app-credit-origination-app
status:
  loadBalancer: {}
