environments/ads-risk-scoring-dev/apps/app-credit-origination-app/services/credit-origination-app/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: credit-origination-app
  namespace: ads-risk-scoring-dev
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: credit-origination-app
    weight: 100
  wildcardPolicy: None
